# Computational-Geometry

./: README.md
Lab1/: CMakeLists.txt  main.cpp
Lab1/2d_tree/: binary_node.h  binary_tree.h  kd_set.h  kd_value.h  tree_2d.cpp  tree_2d.h  value_2d.cpp  value_2d.h
Lab1/2d_tree_method/: main.cpp  number_converter.h  points_reader.h
Lab1/2d_tree_method/2d_tree/: tree_2d.cpp  tree_2d.h  value_2d.cpp  value_2d.h
Lab1/2d_tree_method/binary_tree/: binary_node.h  binary_tree.h
Lab1/2d_tree_method/data/: area.h  line.h  point.h
Lab1/2d_tree_method/menu/: menu.cpp  menu.h
Lab1/binary_tree/: binary_node.h  binary_tree.h
Lab1/data/: area.h  line.h  point.h
Lab1/input/: input.txt
Lab1/output/: 1_input.txt  1_input_from_practice.txt
Lab2/: CMakeLists.txt  main.cpp
Lab2/additional_functions/: array_functions.cpp  array_functions.h  math_functions.cpp  math_functions.h
Lab2/delaunay_triangulation/: delaunay_triangulation.cpp  delaunay_triangulation.h  math_functions.cpp  math_functions.h
Lab2/delaunay_triangulation/data/: line.h  pair.h  point.h  triangle.h  triangulation.cpp  triangulation.h
Lab2/delaunay_triangulation/data/matrix/: my_matrix.h  square_matrix.cpp  square_matrix.h
Lab2/triangulation_drawing/: drawing_colors.cpp  drawing_colors.h  normalizer.cpp  normalizer.h  screenshot_taker.cpp  screenshot_taker.h  triangulation_drawer.cpp  triangulation_drawer.h  triangulation_drawing_converter.cpp  triangulation_drawing_converter.h
